# IMAS-ParaView

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  asv.conf.json  install.sh  pyproject.toml  setup.cfg  setup.py  versioneer.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  publish_pypi.yml
benchmarks/: benchmarks.py  utils.py
ci/: README.rst  build_docs.sh  linting.sh  run_benchmark.sh  run_pytest.sh
docs/: Makefile
docs/source/: 1d_profiles_mapper.rst  1d_profiles_reader.rst  api.rst  beam_reader.rst  ci_config.rst  cli.rst  code_style.rst  conf.py  ggd_reader.rst  index.rst  installing.rst  jorek_reader.rst  los_reader.rst  position_reader.rst  profiles_2d_reader.rst  training.rst  training_jintrac.rst  training_jorek.rst  training_md.rst  training_solps.rst  usage.rst  wall_limiter_reader.rst
docs/source/pv_states/: jintrac_state.pvsm  jorek_state.pvsm  md_state.pvsm  solps_state.pvsm
imas_paraview/: __init__.py  __main__.py  _version.py  cli.py  convert.py  ids_util.py  util.py
imas_paraview/io/: read_geom.py  read_ps.py  write_geom.py  write_ps.py
imas_paraview/plugins/: base_class.py  beam.py  ggd_base_reader.py  jorek.py  line_of_sight.py  position.py  profiles_1d.py  profiles_1d_mapper.py  profiles_2d.py  vtkggdreader.py  vtkggdwriter.py  wall_limiter.py
imas_paraview/tests/: conftest.py  fill_ggd.py  test_beam.py  test_cli.py  test_convert.py  test_ids_util.py  test_imas_uri.py  test_line_of_sight.py  test_logger.py  test_position.py  test_profiles_2d.py  test_read_ps.py  test_version.py  test_wall_limiter.py
imas_paraview/tests/integration_tests/: test_integration.py
tests/: create_ggd.py  create_ids.py  test_version.py
vtkggdtools/: __init__.py  __main__.py  _ids_util.py  _version.py  cli.py  convert.py  converter.py  errors.py  generator.py  ids_util.py  imas_uri.py  imashelper.py  logger_config.py  progress.py  tmp.py  util.py  vtkhandler.py
vtkggdtools/io/: read_bezier.py  read_geom.py  read_jorek.py  read_ps.py  representables.py  write_geom.py  write_ps.py
vtkggdtools/paraview_support/: servermanager_tools.py
vtkggdtools/plugins/: 1d_profile.py  base_class.py  beam.py  ggd_base_reader.py  jorek.py  line_of_sight.py  position.py  profiles_1d.py  profiles_1d_mapper.py  profiles_2d.py  task_5.py  vtkggdreader.py  vtkggdtools.py  vtkggdwriter.py  wall_description_2d.py  wall_limiter.py
vtkggdtools/plugins/templates/: VTKGGDTools.py.jinja
vtkggdtools/tests/: conftest.py  create_ggd.py  create_ids.py  fill_ggd.py  test_beam.py  test_cli.py  test_convert.py  test_ids_util.py  test_imas_uri.py  test_line_of_sight.py  test_logger.py  test_position.py  test_profiles_2d.py  test_read_geom.py  test_read_ps.py  test_util.py  test_wall_limiter.py
vtkggdtools/tests/integration_tests/: test_integration.py
vtkggdtools/tests/integration_tests/xml_integration_tests/: load_ggd.xml  load_hdf5_file_browser.xml  load_hdf5_no_lazy_loading.xml  load_hdf5_uri.xml  load_mdsplus_file_browser.xml  load_mdsplus_no_lazy_loading.xml  load_mdsplus_uri.xml  profiles_1d_mapper.xml
vtkggdtools/tests/integration_tests/xml_xvfb_tests/: failing_test.xml  passing_test.xml
vtkggdtools/tests/test_ids/: edge_profiles.h5  master.h5
